maybe a fix to the x overflow but not a good one

--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -11,6 +11,10 @@
   top: -10px;
 }
 
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
 
 #navbarNavDropdown {
   justify-content: flex-end;
